updated language switch look

--- a/home.html
+++ b/home.html
@@ -241,14 +241,14 @@ function updateTotal() {
     <div class="top_nav">
 
      <div class="languageContainer">
-        <img src="USA_flag.png" alt="">
         <div class="switchLanguage" onclick="changeLanguage()">
+        <img class="usa" src="USA_flag.png" alt="">
              <div class="switchBall" id="ball_id"></div>
+        <img class="dr" src="DR_flag.png" alt="">
         </div>
-        <img src="DR_flag.png" alt="">
      </div>
         
-        <h3 style="position: absolute; top: 20%; left: 50%; transform: translate(-50%, -50%); color: aliceblue;">
+        <h3 style="position: absolute; top: 10%; left: 50%; transform: translate(-50%, -50%); color: aliceblue;">
             Elsilia's Kitchen</h3>
         <div id="cart_num_id">0</div>
         <span class="material-symbols-outlined cart_icon" onclick="openCartContents()">shopping_cart</span>
