--- a/home.html
+++ b/home.html
@@ -405,12 +405,12 @@ function checkoutBtnFunc(){
             </section>
 
             <section class="category">
-                <h1>Meat</h1>
+                <h1>Meats</h1>
                 <div class="tempContainer" id="menu-carne"></div>
             </section>
 
             <section class="category">
-                <h1>Pasta</h1>
+                <h1>Pastas</h1>
                 <div class="tempContainer" id="menu-pasta"></div>
             </section>
 
