fixed small 404 href bug

--- a/404.html
+++ b/404.html
@@ -267,7 +267,9 @@ window.onload = function() {
     // getJsonData();
     //         console.log(allItems);
 
-    const str = "https://samuelg900.github.io/ElsiliasKitchen/404.html/#3/00100f1/00101f1/10101h1/@"
+    // const str = "https://samuelg900.github.io/ElsiliasKitchen/404.html/#3/00100f1/00101f1/10101h1/@"
+    const str = window.location.href;
+    
     // const hash = window.location.hash; // e.g. "#3/00100f1/00101f1/10101h1/@"
 
     // console.log(hash);
