--- a/home.html
+++ b/home.html
@@ -249,8 +249,8 @@
 
 
         function createQRLink() {
-            // let qr_str = 'https://samuelg900.github.io/ElsiliasKitchen/home.html/#' + cart.length + '/';
-            let qr_str = 'http://127.0.0.1:5500/home.html/#' + cart.length + '/';
+            let qr_str = 'https://samuelg900.github.io/ElsiliasKitchen/home.html/#' + cart.length + '/';
+            // let qr_str = 'http://127.0.0.1:5500/home.html/#' + cart.length + '/';
             
             let pansize;
 
