--- a/404.html
+++ b/404.html
@@ -269,6 +269,8 @@ window.onload = function() {
 
     // const str = "https://samuelg900.github.io/ElsiliasKitchen/404.html/#3/00100f1/00101f1/10101h1/@"
     const str = window.location.href;
+
+    console.log(str);
     
     // const hash = window.location.hash; // e.g. "#3/00100f1/00101f1/10101h1/@"
 
