--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>items.json
+<body>
 
 <!-- <h1> 404 Page.... to do later</h1> -->
 
@@ -131,7 +131,7 @@
 <script>
     const allItems = [];
     function getJsonData() {
-    fetch('items1.json')
+    fetch('./items.json')
         .then(response => {
             if (!response.ok) {
                 throw new Error('Network response was not ok ' + response.statusText);
@@ -264,26 +264,15 @@ function getItemsNames(){
 
 window.onload = function() {
 
-    // getJsonData();
-    //         console.log(allItems);
-
-     const str = "https://samuelg900.github.io/ElsiliasKitchen/home.html/#2/00202f1/10203h1/@"
-    // const str = window.location.href;
-
-    
+    //  const str = "https://samuelg900.github.io/ElsiliasKitchen/home.html/#2/00202f1/10203h1/@"
+    const str = window.location.href;
     
     // const hash = window.location.hash; // e.g. "#3/00100f1/00101f1/10101h1/@"
 
-    // console.log(hash);
     let h = str.slice(55, str.length);
     const regex = /^#(\d+)\/((?:\d{5}[fh]\d\/)+)@$/;
-console.log(h);
-// console.log(regex);
-    const match = regex.exec(h);
-// console.log(match);
 
-// image,name, pansize, quantity
-// cart.push({ id, name, sp_name, image, quantity: 1, pan_size, price, cart_button, fullpan, halfpan });
+    const match = regex.exec(h);
 
 
 if (match) {
