--- a/404.html
+++ b/404.html
@@ -131,7 +131,7 @@
 <script>
     const allItems = [];
     function getJsonData() {
-    fetch('items.json')
+    fetch('./items.json')
         .then(response => {
             if (!response.ok) {
                 throw new Error('Network response was not ok ' + response.statusText);
