--- a/404.html
+++ b/404.html
@@ -249,7 +249,7 @@ function getItemsNames(){
 
         if(it){
                 item.name = it.name_english;
-                item.image_url = it.image_link;
+                item.image_url = "https://samuelg900.github.io/ElsiliasKitchen/"+it.image_link;
         }else{//not found
                 return false;
         }
