--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
             data.forEach(i =>{allItems.push(i);})
              getItemsNames();
              renderCart();
-             getQRCode();
+            //  getQRCode();
 
         })
         .catch(error => {
