--- a/404.html
+++ b/404.html
@@ -194,7 +194,7 @@ if (match) {
         });
         summaryHtml += `</ul>`;
 
-            getJsonData();
+            // getJsonData();
 
 //         if(getItemsNames()===false){
            
