--- a/404.html
+++ b/404.html
@@ -166,7 +166,7 @@ function getItemsNames(){
 window.onload = function() {
 
     //  const str = "https://samuelg900.github.io/ElsiliasKitchen/home.html/#2/00202f1/10203h1/@"
-    const str = window.location.href;
+    const str = "window.location.href";
     // const hash = window.location.hash; 
     let hash = str.slice(55, str.length);
     // console.log(h);
