--- a/home.html
+++ b/home.html
@@ -46,6 +46,7 @@
             }
             cart.push({id, name, sp_name, image, quantity: 1, pan_size, price, cart_button, fullpan, halfpan });
 
+            
             return true;
         }
 
@@ -249,7 +250,7 @@
 
 
         function createQRLink() {
-            let qr_str = 'https://samuelg900.github.io/ElsiliasKitchen/home.html/#' + cart.length + '/';
+            let qr_str = 'https://samuelg900.github.io/ElsiliasKitchen/home.html#' + cart.length + '/';
             // let qr_str = 'http://127.0.0.1:5500/home.html/#' + cart.length + '/';
             
             let pansize;
