--- a/home.html
+++ b/home.html
@@ -174,8 +174,7 @@
                 right.style.position = "relative";
 
                 let nameP = document.createElement('p');
-                // nameP.textContent = item.name;
-                nameP.innerHTML=`${item.name}`;
+                nameP.textContent = item.name;
 
                 let pane_size = document.createElement('p');
                 pane_size.classList.add('pan_text');
