--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -356,7 +356,7 @@
 
     <div class="cart" id="cart_contents_id">
         <div class="cartContent">
-            <div id="nothing_in_cart">Cart is emptyyy</div>
+            <div id="nothing_in_cart">Cart is empty</div>
             <div class="cartItems" id="cartItemsId">
             </div>
         </div>
