--- a/home.html
+++ b/home.html
@@ -356,7 +356,7 @@
 
     <div class="cart" id="cart_contents_id">
         <div class="cartContent">
-            <div id="nothing_in_cart">Cart is empty</div>
+            <div id="nothing_in_cart"><p class="nothing_in_cart">Cart is empty</p></div>
             <div class="cartItems" id="cartItemsId">
             </div>
         </div>
