--- a/home.html
+++ b/home.html
@@ -371,7 +371,7 @@
         <img class="ig" style="width: 100%;" src="banner.png">
         <div class="p_container">
             <p class="syncopate-bold">Elsilia's<br>Kitchen</p>
-            <p class="caveat">Delicious Dominican food, from our home to yours</p>
+            <p class="caveat">Delicious Dominican food,<br>from our home to yours</p>
         </div>
     </div>
 
