--- a/home.html
+++ b/home.html
@@ -357,7 +357,7 @@
 
     <div class="cart" id="cart_contents_id">
         <div class="cartContent">
-            <div id="nothing_in_cart" class="nothing_in_cart">Cart is empty</div>
+            <div id="nothing_in_cart">Cart is empty</div>
             <div class="cartItems" id="cartItemsId">
         </div>
             <div class="checkout_div">
@@ -372,7 +372,7 @@
         <img class="ig" style="width: 100%;" src="banner.png">
         <div class="p_container">
             <p class="syncopate-bold">Elsilia's<br>Kitchen</p>
-            <p class="caveat">Delicious Dominican food,<br>from our home to yours</p>
+            <p class="caveat">Delicious Dominican food, from our home to yours</p>
         </div>
     </div>
 
