--- a/home.html
+++ b/home.html
@@ -349,7 +349,7 @@
             </div>
         </div>
 
-        <h3 style="position: absolute; top: 10%; left: 50%; transform: translate(-50%, -50%); color: aliceblue;">
+        <h3 style="position: absolute; top: 10%; left: 50%; transform: translate(-50%, -50%); color: white;">
             Elsilia's Kitchen</h3>
         <div id="cart_num_id">0</div>
         <span class="material-symbols-outlined cart_icon" onclick="openCartContents()">shopping_cart</span>
@@ -362,6 +362,7 @@
         </div>
             <div class="checkout_div">
                 <p id="total_of_order_id">Total: $0</p>
+                <a>Add message...</a>
                 <button id="checkoutBtn" onclick="checkoutBtnFunc()">Checkout</button>
             </div>
         </div>
@@ -427,7 +428,7 @@
             </section>
 
             <section class="category">
-                <h1>Pastas</h1>
+                <h1>Pastas & Salads</h1>
                 <div class="tempContainer" id="menu-pasta"></div>
             </section>
 
@@ -450,7 +451,7 @@
 
         <p id="disclaimerTextId">Each whole pan is enough for approximately 35-38 people</p>
         
-        <p id="disclaimerTextId" style="font-size: 13px;">For transparency: This site used AI imaging for the images seen on the page. If you'd like to see some of the cropped original images used, please click <a href="original_images.html">here</a></p>
+        <p id="disclaimerTextId" style="font-size: 13px;">For transparency: This site used AI imaging for the images seen on the page. If you'd like to see some of the cropped original images used as a reference, please click <a href="original_images.html">here</a></p>
 
         <div id="qrcode-div-background-id">
             <div id="qrcode-div-id">
