--- a/original_images.html
+++ b/original_images.html
@@ -17,6 +17,166 @@
 <body>
 <h1>Pictures</h1>
 
+<div class="top_nav">
+
+        <h3 style="position: absolute; top: 10%; left: 50%; transform: translate(-50%, -50%);">
+            <a href="home.html">Elsilia's Kitchen</a></h3>
+</div>
+
+    <div id="image_viewer_window">
+            <img class="image_viewer" src="">
+            <div class="image_icon_container">
+                <span class="close_icon" onclick="closeImageViewer()" alt="close">&times;</span>
+            </div>
+        </div>
+
+        <script>
+            function closeImageViewer() {
+                document.getElementById('image_viewer_window').style.display = 'none';
+            }
+
+            function openImageViewer(imageSrc) {
+                document.querySelector('.image_viewer').src = imageSrc;
+                document.getElementById('image_viewer_window').style.display = 'block';
+            }
+
+            window.addEventListener('keydown', function (event) {
+
+                // Example: Close modal with Escape key
+                if (event.key === 'Escape') {
+                    if (document.getElementById('image_viewer_window').style.display === 'block') {
+                        document.getElementById('image_viewer_window').style.display = 'none';
+                    }
+                }
+            });
+
+        </script>
+
+<style>
+
+@import url('https://fonts.googleapis.com/css2?family=Lato');
+
+.top_nav {
+    height: 54px;
+    background-color: rgb(42, 42, 42);
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 3;
+    min-width: 400px;
+}
+
+.top_nav a{
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+}
+
+    #image_viewer_window {
+    display: none;
+    align-content: center;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.image_viewer {
+    display: block;
+    justify-self: center;
+    width: 96%;
+    max-width: 900px;
+    z-index: 2;
+}
+
+.close_icon {
+    position: absolute;
+    top: 70px;
+    right: 20px;
+    margin-right: 20px;
+    float: right;
+    color: white;
+    font-size: 40px;
+    transition: 0.3s;
+    cursor: pointer;
+    z-index: 3;
+    text-shadow: 0 0 6px rgba(0, 0, 0, 0.9);
+}
+
+    body{
+        background-color: rgb(100, 106, 113);
+    margin: 0;
+    padding: 0;
+      font-family: "Lato", sans-serif;
+    min-width: 400px;
+    justify-content: center;
+    }
+
+    .grid{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(290px, 2fr));
+        gap: 20px;
+        margin-inline: 40px;
+        /* max-width: 1200px; */
+    }
+
+    .image{
+        width: 300px;
+        cursor: pointer;
+        margin: auto;
+        
+    }
+</style>
+
+ <div id="grid"></div>
+
+  <script>
+    // Array of image URLs
+    const images = [
+        "original_food_images/1.png",
+        "original_food_images/2.png",
+        "original_food_images/3.png",
+        "original_food_images/4.png",
+        "original_food_images/5.png",
+        "original_food_images/6.png",
+        "original_food_images/7.png",
+        "original_food_images/8.png",
+        "original_food_images/9.png",
+        "original_food_images/10.png",
+        "original_food_images/11.png",
+        "original_food_images/12.png",
+        "original_food_images/13.png",
+        "original_food_images/14.png",
+        "original_food_images/15.png",
+        "original_food_images/16.png",
+        "original_food_images/17.png"
+    ];
+
+    // Create the grid container
+    const grid = document.createElement("div");
+    grid.classList.add("grid");
+
+    // Add images to the grid
+    images.forEach(src => {
+      const img = document.createElement("img");
+      img.className="image";
+      img.src = src;
+      img.alt = "Image";
+      img.addEventListener('click', () => openImageViewer(src));
+      grid.appendChild(img);
+
+    });
+
+    // Add the grid to the page
+    document.getElementById("grid").appendChild(grid);
+  </script>
+
 </body>
 
 </html>
