--- a/original_images.html
+++ b/original_images.html
@@ -15,13 +15,13 @@
 </head>
 
 <body>
-<h1>Pictures</h1>
 
 <div class="top_nav">
-
-        <h3 style="position: absolute; top: 10%; left: 50%; transform: translate(-50%, -50%);">
-            <a href="home.html">Elsilia's Kitchen</a></h3>
+    <h3 style="position: absolute; top: 10%; left: 50%; transform: translate(-50%, -50%);">
+        <a href="home.html">Elsilia's Kitchen</a></h3>
 </div>
+
+<h2 style="margin-top: 100px; text-align: center; color: white;">These are the original (cropped) pictures taken right from phones</h2>
 
     <div id="image_viewer_window">
             <img class="image_viewer" src="">
