--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 
 <body id="main-content">
 
- <div id="loading-screen">
+ <!-- <div id="loading-screen">
         <div class="spinner"></div>
         <p>Loading...</p>
     </div>
@@ -71,15 +71,10 @@
       0% { transform: rotate(0deg); }
         100% { transform: rotate(360deg); }
     }
-    </style>
+    </style> -->
 
 
     <script>
-
-//  window.onload = function() {
-//         document.getElementById('loading-screen').style.display = 'none';
-//          document.getElementById('main-content').style.display = 'block'; // Show main content
-//     };
 
         //refresh content
         function changeLanguage() {
