--- a/404.html
+++ b/404.html
@@ -74,7 +74,7 @@
                 height: 256,
                 colorDark: "#000000",
                 colorLight: "#ffffff",
-                correctLevel: QRCode.CorrectLevel.L
+                correctLevel: QRCode.CorrectLevel.H
             });
 
         }
